Closed
Bug 1696893
Opened 4 years ago
Closed 4 years ago
Crash in [@ memset | nsXPCWrappedJS::CleanupOutparams] via nsMsgMdnGenerator::SendMdnMsg
Categories
(Thunderbird :: General, defect)
Tracking
(thunderbird_esr78 unaffected, thunderbird87 unaffected)
RESOLVED
FIXED
88 Branch
Tracking | Status | |
---|---|---|
thunderbird_esr78 | --- | unaffected |
thunderbird87 | --- | unaffected |
People
(Reporter: wsmwk, Assigned: rnons)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
Daily crash - begins with feb 28 daily build. Continues to today.
Crash report: https://crash-stats.mozilla.org/report/index/87f76b08-f79e-4058-8dc2-f25eb0210301
Reason: EXCEPTION_ACCESS_VIOLATION_WRITE
Top 10 frames of crashing thread:
0 vcruntime140.dll memset f:\dd\vctools\crt\vcruntime\src\string\amd64\memset.asm:292
1 xul.dll static nsXPCWrappedJS::CleanupOutparams js/xpconnect/src/XPCWrappedJSClass.cpp:588
2 xul.dll nsXPCWrappedJS::CallMethod js/xpconnect/src/XPCWrappedJSClass.cpp:951
3 xul.dll PrepareAndDispatch xpcom/reflect/xptcall/md/win32/xptcstubs_x86_64.cpp:168
4 xul.dll SharedStub
5 xul.dll nsMsgMdnGenerator::SendMdnMsg comm/mailnews/extensions/mdn/nsMsgMdnGenerator.cpp:758
6 xul.dll nsMsgMdnGenerator::CreateMdnMsg comm/mailnews/extensions/mdn/nsMsgMdnGenerator.cpp:366
7 xul.dll nsMsgMdnGenerator::UserAgreed comm/mailnews/extensions/mdn/nsMsgMdnGenerator.cpp:903
8 xul.dll XPTC__InvokebyIndex
9 xul.dll static XPCWrappedNative::CallMethod js/xpconnect/src/XPCWrappedNative.cpp:1142
bp-b2e8cdab-0412-49c5-ad5a-4b1dd0210308 (has no extensions)
Flags: needinfo?(mkmelin+mozilla)
Reporter | ||
Comment 1•4 years ago
|
||
Ping, is nsMsgMdnGenerator::SendMdnMsg in your area?
Flags: needinfo?(remotenonsense)
Summary: Crash in [@ memset | nsXPCWrappedJS::CleanupOutparams] → Crash in [@ memset | nsXPCWrappedJS::CleanupOutparams] via nsMsgMdnGenerator::SendMdnMsg
Assignee | ||
Comment 2•4 years ago
|
||
This must be from bug 1661694, I will send a fix.
Flags: needinfo?(remotenonsense)
Assignee | ||
Comment 3•4 years ago
|
||
Seems when an idl function is implemented in JS, the out param can't be nullptr in C++.
Updated•4 years ago
|
Assignee: nobody → remotenonsense
Status: NEW → ASSIGNED
Assignee | ||
Updated•4 years ago
|
status-thunderbird87:
--- → unaffected
Keywords: regressionwindow-wanted → checkin-needed-tb
Regressed by: smtp-js
Target Milestone: --- → 88 Branch
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/9a412f255856
Fix crash in nsMsgMdnGenerator::SendMdnMsg. r=mkmelin
Updated•4 years ago
|
Flags: needinfo?(mkmelin+mozilla)
You need to log in
before you can comment on or make changes to this bug.
Description
•