Bug 1696893 - Fix crash in nsMsgMdnGenerator::SendMdnMsg. r=mkmelin

Seems when an idl function is implemented in JS, the out param can't be nullptr in C++.

Differential Revision: https://phabricator.services.mozilla.com/D108732

--HG--
extra : amend_source : f9824a2343663ca3d62bef84fa650f166c7702d8