mailnews/extensions/mdn/nsMsgMdnGenerator.cpp
@@ -752,12 +752,13 @@ nsresult nsMsgMdnGenerator::SendMdnMsg() {
       do_GetService(NS_SMTPSERVICE_CONTRACTID, &rv);
   NS_ENSURE_SUCCESS(rv, rv);
 
+  nsCOMPtr<nsIURI> aUri;
   nsCOMPtr<nsIRequest> aRequest;
   nsCString identEmail;
   m_identity->GetEmail(identEmail);
   smtpService->SendMailMessage(
       m_file, m_dntRrt.get(), m_identity, identEmail.get(), EmptyString(), this,
-      nullptr, nullptr, false, nullptr, getter_AddRefs(aRequest));
+      nullptr, nullptr, false, getter_AddRefs(aUri), getter_AddRefs(aRequest));
 
   return NS_OK;
 }
