mailnews/compose/test/unit/head_compose.js
@@ -274,8 +274,3 @@ function getMessageBody(content) {
 registerCleanupFunction(function() {
   load(gDEPTH + "mailnews/resources/mailShutdown.js");
 });
-
-// Trigger the loading of nsMsgSend.cpp or MessageSend.jsm according to
-// mailnews.send.jsmodule pref.
-Cc["@mozilla.org/messengercompose/send-module-loader;1"].getService();
-Cc["@mozilla.org/messengercompose/smtp-module-loader;1"].getService();
